--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
             <button class="control-btn rocket" onclick="restPet()">
                 <span>🚀</span>
                 <span>Rocket</span>
-                <small>รีเซ็ตทุกค่า</small>
+                <small>สัตว์เลี้ยงใหม่</small>
             </button>
         </div>
 
